<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etShowNumber"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/numberActionButton"
        android:ems="10"
        android:gravity="right|bottom"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tvClear"
                style="@style/NumberActionButton2"
                android:onClick="buCleanEvent"
                android:text="@string/clear" />

            <Button
                android:id="@+id/tvPlusMinus"
                style="@style/NumberActionButton2"
                android:onClick="NumberEvent"
                android:text="@string/plus_minus" />

            <Button
                android:id="@+id/tvPercent"
                style="@style/NumberActionButton2"
                android:onClick="buPercentEvent"
                android:text="@string/percent" />

            <Button
                android:id="@+id/tvDivide"
                style="@style/ActionButtonStyle"
                android:onClick="buOpEvent"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tvSeven"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvEight"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvNine"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvMul"
                style="@style/ActionButtonStyle"
                android:onClick="buOpEvent"
                android:text="@string/multiply"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textSize="30sp">

            <Button
                android:id="@+id/tvFour"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvFive"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvSix"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvMinus"
                style="@style/ActionButtonStyle"
                android:onClick="buOpEvent"
                android:text="@string/minus"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textSize="30sp">

            <Button
                android:id="@+id/tvOne"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvTwo"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvThree"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/number_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvPlus"
                style="@style/ActionButtonStyle"
                android:onClick="buOpEvent"
                android:text="@string/plus"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/tvZero"
                style="@style/NumberButtonStyle"
                android:layout_weight="2"
                android:onClick="NumberEvent"
                android:text="@string/number_zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvDot"
                style="@style/NumberButtonStyle"
                android:onClick="NumberEvent"
                android:text="@string/dot"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tvEquals"
                style="@style/ActionButtonStyle"
                android:onClick="buEqualEvent"
                android:text="@string/equal"
                android:textSize="30sp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>